# flake-templates

./: flake.nix
package/: flake.nix
pcb/: flake.nix
rp2040/: .gitignore  CMakeLists.txt  flake.nix  flash.jlink
scripts/: gitlab-rev.sh
shell/: flake.nix
